--- a/package.json
+++ b/package.json
@@ -1,39 +1,35 @@
 {
-  "name": "typescript-template-repository",
-  "version": "0.0.0",
-  "description": "This is a template for TypeScript projects",
+  "name": "ws2801-alexa-connector",
+  "version": "0.1.0",
+  "description": "An alexa connector for the WS2801-Pi module.",
   "main": "dist/index.js",
   "scripts": {
     "build": "rm -rf dist && tsc",
     "lint": "tslint --project .",
-    "start": "node dist/index.js",
-    "test": "c8 mocha dist/tests/*.js --timeout 15000 --exit",
-    "test:coverage": "npm run test:coverage-check && npm run test:coverage-report",
-    "test:coverage-check": "c8 check-coverage --lines 70 --functions 70 --branches 70",
-    "test:coverage-report": "c8 report"
+    "start": "node dist/run.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SteffenKn/typescript-template-repository.git"
+    "url": "git+https://github.com/SteffenKn/ws2801-alexa-connector.git"
   },
   "keywords": [
-    "typescript",
-    "template"
+    "ws2801",
+    "alexa",
+    "pi"
   ],
   "author": "Steffen Knaup",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/SteffenKn/typescript-template-repository/issues"
+    "url": "https://github.com/SteffenKn/ws2801-alexa-connector/issues"
   },
-  "homepage": "https://github.com/SteffenKn/typescript-template-repository#readme",
-  "dependencies": {},
+  "homepage": "https://github.com/SteffenKn/ws2801-alexa-connector#readme",
+  "dependencies": {
+    "ws": "^7.4.2",
+    "ws2801-pi": "^1.1.0"
+  },
   "devDependencies": {
-    "@types/chai": "4.2.14",
-    "@types/mocha": "8.2.0",
     "@types/node": "14.14.16",
-    "c8": "7.3.5",
-    "chai": "4.2.0",
-    "mocha": "8.2.1",
+    "@types/ws": "^7.4.0",
     "tslint": "6.1.3",
     "tslint-eslint-rules": "5.4.0",
     "typescript": "4.1.3"
