--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   "homepage": "https://github.com/SteffenKn/ws2801-alexa#readme",
   "dependencies": {
     "sinricpro": "2.2.5",
-    "ws2801-pi": "^1.1.0"
+    "ws2801-pi": "1.2.0"
   },
   "devDependencies": {
-    "@types/node": "14.14.16",
-    "@types/ws": "^7.4.0",
+    "@types/node": "14.14.22",
+    "@types/ws": "7.4.0",
     "tslint": "6.1.3",
     "tslint-eslint-rules": "5.4.0",
     "typescript": "4.1.3"
